Version 1.7.10+svn:
 * Language and i18n:
   * Updated translations:
 * Miscellaneous and bugfixes:
   * Scrollbar containers now use the button super class

Version 1.7.10-1.8beta3:
 * Campaigns:
   * Under the Burning Suns:
     * Fix locations of some items in "In the domain of the dwarves"
       (bug #14925)
 * Graphics:
   * Added attack icon for Drake Ram attack, and for UtBS's Giant Ant.
 * Language and i18n:
   * Updated translations: French, German, Hungarian, Italian, Latvian,
     Lithuanian, Polish, Portuguese (Brazil), Russian, Serbian, Slovak
 * User interface:
   * Don't reserve space for scrollbars in message dialogs
   * Ctrl-f for fullscreen works again in the MP lobby (bug #14759)
   * Resizing the MP lobby no longer crashes randomly
 * WML Engine:
   * Fix bug #14859: [time_area] created by event are not saved
   * Allow modifications to change unit ellipse
 * Miscellaneous and bugfixes:
   * Add a minimap cache for gui2
   * Add a new super class for the button
   * Added a new gui2 timer engine
   * Add hotkey support for gui2
   * Change Drake Flare and Flameheart weapon names to match new weapons
   * Converted the hover tooltips to use the new timer engine
   * Fix bug #14865: move+attack into hex with ambusher causes crash
   * Fix the addon upload script to include the translate flag (patch #1387)
   * Fix the gui2 unit tests
   * MP lobby refresh to the new timer engine
   * Optimize AI recruitement and movement phases
   * Reduced header dependencies
   * Remove spurious hover error messages
   * Shorter "Initializing Display" phase when staying in same campaign/MP

Version 1.7.9-beta2:
 * AI:
   * new [limit] subtag of [value] of ai_default::recruitment implementation of
     recruitment aspect - allow easy limiting of number of concurrent recruits
     of specific type in the field
   * new rate_action formula_ai function which returns a rating of 
     attack analysis.