@@ -3,6 +3,7 @@ Version 1.7.10+svn:
    * Updated translations:
  * Miscellaneous and bugfixes:
    * Scrollbar containers now use the button super class
+   * Allow a gui2 timer delete itself in its callback
 
 Version 1.7.10-1.8beta3:
  * Campaigns:
